--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>My Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 
-<body>
+<body class="Portfolio">
     <H1>
         My Portfolio
     </H1>
+    <div class="page-content">
+      <h3>Landyn Hixson</h3>
+    <h3>Software Developer</h3>
+    <img class="Miami-Dolphins-Logo" alt="Miami Dolphins" src="./images/Miami-Dolphins-Logo.png">
+      <p>I am a future software developer ready to make webistes</p>
+      <hr>
+    </div>
+    <h2>About Me</h2>
+    <p>Hi, my name is Landyn Hixson I am a High School graduate and I also really like the dolphins, both the animal and the football team.</p>
+    <ul class="Projects">
+      <li>Project 1</li>
+      <li>Project 2</li>
+      <li>Project 3</li>
+      </ul>
+      <h2>Contact Me</h2>
+      <p>999-999-9999</p>
+      <a href="mailto:fake@email.com"> Email Me</a>
+    </ul>
+  </div>
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
