--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <h3>Landyn Hixson</h3>
     <h3>Software Developer</h3>
     <img class="Miami-Dolphins-Logo" alt="Miami Dolphins" src="./images/Miami-Dolphins-Logo.png">
-      <p>I am a future software developer ready to make webistes</p>
+      <p>I am a future software developer ready to make websites.</p>
       <hr>
     </div>
     <h2>About Me</h2>
